# MOEA-FIND

./: .gitignore  CLAUDE.md  KIRSCH_INTEGRATION.md  README.md  pyproject.toml
docs/: borg_integration_notes.md  handoff_pywrdrb_mpi_scatter_fix.md  moea_find_verification_criteria.md
manuscript/: INDEX.md  ORGANIZATION.md  autonomous_plan.md  code_alignment_backlog.md  constraints_spec.md  critical_analysis.md  design_decisions.md  experiment_plan.md  figure1_spec.md  framing_anchor.md  framing_anchor_synthesis.md  hpc_deployment_status.md  intro_critique_round1.md  intro_critique_round2.md  introduction_revised.md  introduction_revised_round1.md  introduction_revised_round2.md  literature_review.md  manuscript_main_draft.md  methods_audit.md  publication_plan.md  research_questions.md  reviewer_critiques.md  section3_3_redesign.md  shell_vs_interior_diagnostic.md  style_guide.md  supporting_info_draft.md  worktree_sync_audit.md
notes/: MOEA-FIND proposal.pptx  critical_analysis.md  design_decisions.md  literature_review.md  method_proposal.md  research_questions.md
scripts/: 01_analytic_2d.py  01_analytic_2d.slurm  02_analytic_3d.py  02_analytic_3d.slurm  03_eps_nfe_sweep.py  03_eps_nfe_sweep.slurm  04_kirsch_single_site.py  04_kirsch_single_site.slurm  05_kirsch_library_build.py  05_kirsch_library_build.slurm  06_library_subsample_baseline.py  06_library_subsample_baseline.slurm  07_event_level_kirsch.py  07_event_level_kirsch.slurm  08_drb_multisite_moea.py  08_drb_multisite_moea.slurm  09_drb_policy_reeval.py  09_drb_policy_reeval.slurm  README.md  _common.sh  (+6 more)
(+498 files in other folders)
